# ros2_ws

./: notes  notes.txt  requirements.txt
arduino/1/: 1.ino
arduino/2/: 2.ino
arduino/3/: 3.ino
install/: local_setup.sh  setup.sh
install/drive/lib/drive/: drive_control  motor_controller  motor_health_monitor
install/drive/share/drive/: drive_launch.py  package.ps1  package.sh  package.xml
install/drive/share/drive/config/: drive_params.yaml
install/positioning/lib/positioning/: camera_odometry_node  gps_node  gps_sensor_node  gsm_position_node  imu_node  imu_sensor_node  lidar_localization_node  nav2_interface_node  position_estimator_node  position_monitor_node  sensor_fusion_node
install/positioning/share/positioning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
robot_control/: db.sqlite3  manage.py
robot_control/controller/: ros_controller.py  urls.py  views.py
robot_control/controller/templates/controller/: index copy.html  index.html  logs.html
robot_control/robot_control/: asgi.py  settings.py  urls.py  wsgi.py
services/: ros2_aerator.sh  ros2_dethatcher.sh  ros2_django.sh  ros2_drive.sh  ros2_mower.sh  ros2_wc.sh
src/aerator/: package.xml  setup.cfg  setup.py
src/aerator/aerator/: aerator_la_control.py  aerator_planner.py  aerator_ultra_sensor.py
src/aerator/config/: aerator_config.yaml
src/aerator/launch/: aerator_launch.py
src/core_launcher/: package.xml  setup.cfg  setup.py
src/core_launcher/launch/: robot_launch.py
src/dethatcher/: package.xml  setup.cfg  setup.py
src/dethatcher/config/: dethatcher_config.yaml
src/dethatcher/dethatcher/: dethatcher_la_control.py  dethatcher_motor_control.py  dethatcher_planner.py  dethatcher_ultra_sensor.py
src/dethatcher/launch/: dethatcher_launch.py
src/drive/: package.xml  setup.py
src/drive/config/: drive_config.yaml  drive_params.yaml
src/drive/drive/: drive_control_node.py  emergency_stop_node.py  motor_controller_node.py  motor_health_monitor_node.py
src/drive/launch/: drive_launch.py
src/manual_control/: package.xml  setup.py
src/manual_control/manual_control/: keyboard_control.py
src/mower/: package.xml  setup.py
src/mower/config/: mower_config.yaml
src/mower/launch/: mower_launch.py
src/mower/mower/: mower_la_control.py  mower_motor_control.py  mower_planner.py  mower_ultra_sensor.py
src/positioning/: package.xml  setup.py
src/positioning/positioning/: gps_node.py  gps_sensor_node.py  imu_node.py  imu_sensor_node.py  sensor_fusion_node.py
src/system/: package.xml  setup.py
src/system/system/: log_handler_node.py  system_node.py
src/weed_control/: package.xml  setup.cfg  setup.py
src/weed_control/config/: wc_config.yaml
src/weed_control/launch/: weed_control_launch.py
src/weed_control/weed_control/: weed_control_cam.py  weed_control_la_control.py  weed_control_planner.py  weed_control_stepper_control.py  weed_control_ultra_sensor.py
test0/arduino/1/: 1.ino
test0/arduino/2/: 2.ino
test0/arduino/3/: 3.ino
test0/arduino/esc/: esc.ino
test0/arduino/imu/: imu.ino
test0/arduino/test/: test.ino
test0/python/: I2C_LCD_driver.py  arduino2_action.py  bat_servo_test.py  cam_servo_test.py  control_esc.py  esc_test.py  lcd_show.py  motors_test.py  serial_test.py  servo270_test.py  servo_esc.py  servo_test.py  spi_test.py
