<?xml version="1.0"?>
<package format="2">
  <name>aerator</name>
  <version>0.0.1</version>
  <description>Aerator package for controlling lawn care robot's aerator functionality</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
