<?xml version="1.0"?>
<package format="2">
  <name>dethatcher</name>
  <version>0.0.1</version>
  <description>Dethatcher package for controlling lawn care robot's dethatcher functionality</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
