<?xml version="1.0"?>
<package format="3">
  <name>positioning</name>
  <version>0.0.1</version>
  <description>Positioning package for ROS2 using IMU, GPS, GSM, and 3D depth camera data</description>

  <maintainer email="delta@example.com">delta</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>  <!-- Dependency for transforming data frames, if needed -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
